src/openshift/resources/echo-server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echoserver-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
        partition: poc
    spec:
      containers:
      - name: echoserver
        image: com.airlock.waf/echoserver:1.0-SNAPSHOT
        ports:
        - containerPort: 8080
