src/openshift/resources/echo-server-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: echoserver-route
  labels:
    partition: poc
  annotations:
    waf.airlock.com/mapping.name: root
spec:
  host: myminishift.info
  to:
    kind: Service
    name: echoserver-service
